--- a/SIGDEN/Properties/Resources.resx
+++ b/SIGDEN/Properties/Resources.resx
@@ -184,9 +184,6 @@
   <data name="bolasalgodon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bolasalgodon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Eslogan SIGDEN (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Eslogan SIGDEN (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Logo SIDGEN (5) (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo SIDGEN (5) (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -301,6 +298,9 @@
   <data name="CETIRIZINA-10MG-IF-100-TABLETAS" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CETIRIZINA-10MG-IF-100-TABLETAS.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="acetaminofen-650" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\acetaminofen-650.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -319,8 +319,8 @@
   <data name="boton-circular-plus1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\boton-circular-plus1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="acetaminofen-650" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\acetaminofen-650.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Eslogan SIGDEN (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Eslogan SIGDEN (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Dios Padre" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Dios Padre.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -330,5 +330,8 @@
   </data>
   <data name="GIF2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GIF3.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Logo SIDGEN (18)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Logo SIDGEN (18).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
